<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trailers_outer_container"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_weight="@integer/cardViewLeft">

    <LinearLayout

        android:paddingBottom="@dimen/card_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:id="@+id/trailers_header_container"
            style="@style/Widget.CardContent"
            android:paddingBottom="8dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="99"
                android:id="@+id/trailers_header"
                style="@style/InfoboxText"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/movie_trailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cardview_dark_background" />

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingTop="3dp"
                android:paddingRight="12dp"
                android:text="@string/btnShare_text"
                android:textStyle="italic|bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 />

            <ImageButton
                android:id="@+id/btnShare"
                android:src="@android:drawable/ic_menu_share"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:contentDescription="@string/share_this_movie_trailer"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:paddingLeft="0dp"
                />
        </LinearLayout>

        <View
            style="@style/Divider_Primary"
           />

        <HorizontalScrollView
            android:background="@android:color/background_dark"
            android:id="@+id/trailers_container"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false" >

            <LinearLayout
                android:id="@+id/trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:orientation="horizontal"
                android:paddingLeft="10dp"  />

        </HorizontalScrollView>

    </LinearLayout>

</android.support.v7.widget.CardView>